fixed labels tags

--- a/Lesson2/hometask1_checklist.html
+++ b/Lesson2/hometask1_checklist.html
@@ -15,22 +15,22 @@
     <section>
         <form action="#">
             <ul>
-                <li><label><input type="checkbox" name="bread">
-                        Хлеб
-                    </label>
+                <li><label for="bread">Хлеб</label>
+                    <input type="checkbox" name="bread" id="bread">
                 </li>
-                <li><label><input type="checkbox" name="milk">
-                        Молоко
-                    </label>
+
+                <li><label for="milk">Молоко</label>
+                    <input type="checkbox" name="milk" id="milk">
                 </li>
-                <li><label><input type="checkbox" name="meta">
-                        Мясо
-                    </label>
+
+                <li><label for="meat">Мясо</label>
+                    <input type="checkbox" name="meat" id="meat">
                 </li>
-                <li><label><input type="checkbox" name="vegetables">
-                        Овощи
-                    </label>
+
+                <li><label for="vegetebles">Овощи</label>
+                    <input type="checkbox" name="vegetebles" id="vegetebles">
                 </li>
+
 
             </ul>
 
