added some code

--- a/MySelfPractice/HTML_course/index.html
+++ b/MySelfPractice/HTML_course/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div>
-        <div>
+        <div class="wrap">
             <a href="" class="logo-img"></a>
             <ul class="nav">
                 <li>Home</li>
@@ -25,100 +25,104 @@
             </ul>
         </div>
 
-        <h1 class="header__text-main">Best Software Landingpage</h1>
-
-        <div class="btn-group">
-            <a href="" class="header__btn-active btn-primary">Get Started Now</a>
-            <a href="" class="header__btn btn-secondary"> Learn More</a>
+        <div class="wrap">
+            <h1 class="header__text-main">Best Software Landingpage</h1>
+            <div class="btn-group">
+                <a href="" class="header__btn-active btn-primary">Get Started Now</a>
+                <a href="" class="header__btn btn-secondary"> Learn More</a>
+            </div>
         </div>
     </div>
 
     <div>
-        <ul class="company__logo-block">
-            <li class="logo-item"><img src="" alt=""></li>
-            <li class="logo-item"><img src="" alt=""></li>
-            <li class="logo-item"><img src="" alt=""></li>
-            <li class="logo-item"><img src="" alt=""></li>
-        </ul>
+        <div class="wrap">
+            <ul class="company__logo-block">
+                <li class="logo-item"><img src="" alt=""></li>
+                <li class="logo-item"><img src="" alt=""></li>
+                <li class="logo-item"><img src="" alt=""></li>
+                <li class="logo-item"><img src="" alt=""></li>
+            </ul>
+        </div>
     </div>
 
 
     <div class="page-grid">
-        <div class="grid">
-            <h2>
-                <span>Features</span>Best Features Even Seen
-            </h2>
-            <div class="grid-item">
-                <div></div>
-                <h3>Well documented</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
-                    officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
-                    provident
-                    aspernatur dolor? Totam, est?</p>
-                <a href="">Read More</a>
-            </div>
+        <div class="wrap">
+            <div class="grid">
+                <h2>
+                    <span>Features</span>Best Features Even Seen
+                </h2>
+                <div class="grid-item">
+                    <div></div>
+                    <h3>Well documented</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
+                        officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
+                        provident
+                        aspernatur dolor? Totam, est?</p>
+                    <a href="">Read More</a>
+                </div>
 
+                <div>
+                    <div class="grid-item"></div>
+                    <h3>Well documented</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
+                        officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
+                        provident
+                        aspernatur dolor? Totam, est?</p>
+                    <a href="">Read More</a>
+                </div>
+
+                <div class="grid-item">
+                    <div></div>
+                    <h3>Well documented</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
+                        officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
+                        provident
+                        aspernatur dolor? Totam, est?</p>
+                    <a href="">Read More</a>
+                </div>
+
+                <div class="grid-item">
+                    <div></div>
+                    <h3>Well documented</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
+                        officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
+                        provident
+                        aspernatur dolor? Totam, est?</p>
+                    <a href="">Read More</a>
+                </div>
+
+                <div class="grid-item">
+                    <div></div>
+                    <h3>Well documented</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
+                        officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
+                        provident
+                        aspernatur dolor? Totam, est?</p>
+                    <a href="">Read More</a>
+                </div>
+
+                <div class="grid-item">
+                    <div></div>
+                    <h3>Well documented</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
+                        officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
+                        provident
+                        aspernatur dolor? Totam, est?</p>
+                    <a href="">Read More</a>
+                </div>
+            </div>
             <div>
-                <div class="grid-item"></div>
-                <h3>Well documented</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
-                    officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
-                    provident
-                    aspernatur dolor? Totam, est?</p>
-                <a href="">Read More</a>
-            </div>
-
-            <div class="grid-item">
-                <div></div>
-                <h3>Well documented</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
-                    officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
-                    provident
-                    aspernatur dolor? Totam, est?</p>
-                <a href="">Read More</a>
-            </div>
-
-            <div class="grid-item">
-                <div></div>
-                <h3>Well documented</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
-                    officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
-                    provident
-                    aspernatur dolor? Totam, est?</p>
-                <a href="">Read More</a>
-            </div>
-
-            <div class="grid-item">
-                <div></div>
-                <h3>Well documented</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
-                    officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
-                    provident
-                    aspernatur dolor? Totam, est?</p>
-                <a href="">Read More</a>
-            </div>
-
-            <div class="grid-item">
-                <div></div>
-                <h3>Well documented</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem consectetur esse adipisci laborum
-                    officia, optio iure debitis dignissimos quis dolorem deserunt accusamus ipsa velit odio
-                    provident
-                    aspernatur dolor? Totam, est?</p>
-                <a href="">Read More</a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus unde, aperiam, molestias natus dolores
+                    voluptatum voluptatem voluptas, eligendi cum quos quaerat repudiandae! Sit et ab quisquam facere
+                    nihil, reiciendis aut.</p>
+                <p><span>Rosalina Poing</span> - Founder, uithemes</p>
             </div>
         </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus unde, aperiam, molestias natus dolores
-                voluptatum voluptatem voluptas, eligendi cum quos quaerat repudiandae! Sit et ab quisquam facere
-                nihil, reiciendis aut.</p>
-            <p><span>Rosalina Poing</span> - Founder, uithemes</p>
-        </div>
-
     </div>
 
     <div class="subscribe__block">
-        <div>
+        <div class="wrap">
             <div>
                 <h2>
                     <span>Subscribe</span>signup for a trail
@@ -134,26 +138,30 @@
     </div>
 
     <div class="software__features__block">
-        <h2>Grab Your Software With amazing Freatures</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus in doloribus sequi cumque enim
-            ipsum impedit maiores, quibusdam cum, repellat, tempore inventore magni illo odio eveniet laborum. Fuga,
-            blanditiis.</p>
+        <div class="wrap">
+            <h2>Grab Your Software With amazing Freatures</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ducimus in doloribus sequi cumque
+                enim
+                ipsum impedit maiores, quibusdam cum, repellat, tempore inventore magni illo odio eveniet laborum. Fuga,
+                blanditiis.</p>
 
-        <dl>
-            <dt>01. Clean Design</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis earum expedita vitae in? Ipsam nemo
-                dignissimos maiores, natus voluptatibus quidem autem vitae. Sed quidem ullam vitae porro iusto ducimus
-                recusandae.</dd>
-            <dt>02. Easy to customise</dt>
-            <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis earum expedita vitae in? Ipsam nemo
-                dignissimos maiores, natus voluptatibus quidem autem vitae. Sed quidem ullam vitae porro iusto ducimus
-                recusandae.</dd>
-        </dl>
-
+            <dl>
+                <dt>01. Clean Design</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis earum expedita vitae in? Ipsam nemo
+                    dignissimos maiores, natus voluptatibus quidem autem vitae. Sed quidem ullam vitae porro iusto
+                    ducimus
+                    recusandae.</dd>
+                <dt>02. Easy to customise</dt>
+                <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis earum expedita vitae in? Ipsam nemo
+                    dignissimos maiores, natus voluptatibus quidem autem vitae. Sed quidem ullam vitae porro iusto
+                    ducimus
+                    recusandae.</dd>
+            </dl>
+        </div>
     </div>
 
     <div class="stat__block">
-        <div>
+        <div class="wrap">
             <h2><span>Fun Facts</span> Some Fun Facts About Dashboard</h2>
             <ul>
                 <li><span>53k</span>layouts</li>
@@ -166,7 +174,7 @@
 
 
     <div class="meet__future__block">
-        <div>
+        <div class="wrap">
             <h2>Meet With future Landingpage</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, ipsum adipisci incidunt officia autem id
@@ -178,14 +186,15 @@
                 <li><a target="_blank" href="./img/app-store-button.png"></a></li>
                 <li><a target="_blank" href="./img/google-play-button.png"></a></li>
             </ul>
-        </div>
-        <div>
-            <img src="./img/play.png" alt="play-picture">
+
+            <div>
+                <img src="./img/play.png" alt="play-picture">
+            </div>
         </div>
     </div>
 
     <div class="analytics__block">
-        <div>
+        <div class="wrap">
             <img src="" alt="stat-img">
             <div>
                 <img src="" alt="icon">
@@ -200,7 +209,7 @@
 
 
     <div class="control__block">
-        <div>
+        <div class="wrap">
             <div>
                 <img src="" alt="icon">
                 <h2>Easy To Etid &
@@ -216,7 +225,7 @@
     </div>
 
     <div class="screen__block">
-        <div>
+        <div class="wrap">
             <h3>
                 <span>Screen Previev</span>
                 Screenshot With Details
@@ -226,95 +235,99 @@
     </div>
 
     <div class="page-clients">
-        <h2>
-            <span>Testtimonials</span>
-            Our Happy Clients
-        </h2>
-        <div class="box__client">
-            <p>
-                It is a long established fact that a read
-                her will be distracted by the readable
-                content of a page when looking.
-            </p>
-            <p class="name">Rolin B.Mirano</p>
-            <p class="position"> CEO, UIHUB</p>
-        </div>
-        <div class="box__client">
-            <p>
-                It is a long established fact that a read
-                her will be distracted by the readable
-                content of a page when looking.
-            </p>
-            <p class="name">Rolin B.Mirano</p>
-            <p class="position"> CEO, UIHUB</p>
-        </div>
-        <div class="box__client">
-            <p>
-                It is a long established fact that a read
-                her will be distracted by the readable
-                content of a page when looking.
-            </p>
-            <p class="name">Rolin B.Mirano</p>
-            <p class="position"> CEO, UIHUB</p>
+        <div class="wrap">
+            <h2>
+                <span>Testtimonials</span>
+                Our Happy Clients
+            </h2>
+            <div class="box__client">
+                <p>
+                    It is a long established fact that a read
+                    her will be distracted by the readable
+                    content of a page when looking.
+                </p>
+                <p class="name">Rolin B.Mirano</p>
+                <p class="position"> CEO, UIHUB</p>
+            </div>
+            <div class="box__client">
+                <p>
+                    It is a long established fact that a read
+                    her will be distracted by the readable
+                    content of a page when looking.
+                </p>
+                <p class="name">Rolin B.Mirano</p>
+                <p class="position"> CEO, UIHUB</p>
+            </div>
+            <div class="box__client">
+                <p>
+                    It is a long established fact that a read
+                    her will be distracted by the readable
+                    content of a page when looking.
+                </p>
+                <p class="name">Rolin B.Mirano</p>
+                <p class="position"> CEO, UIHUB</p>
+            </div>
         </div>
     </div>
 
     <div class="page-plan">
-        <h2>
-            <span>Our Plans</span>
-            Pricing Plans
-        </h2>
+        <div class="wrap">
+            <h2>
+                <span>Our Plans</span>
+                Pricing Plans
+            </h2>
 
-        <div class="plan">
-            <h3>
-                <span>free</span>
-                starter
-            </h3>
-            <ul>
-                <li>Unlimited users Active</li>
-                <li>1 GB Bandwidth Speed</li>
-                <li>256 MB Memory Card</li>
-                <li>Free Domain Name</li>
-                <li>Free Hosting Name</li>
-                <li>24x7 Online Support </li>
-            </ul>
-            <a href="" class="btn-choose-plan">Choose Plan</a>
-        </div>
-        <div class="plan--active">
-            <h3>
-                <span>90</span>
-                starter
-            </h3>
-            <ul>
-                <li>Unlimited users Active</li>
-                <li>1 GB Bandwidth Speed</li>
-                <li>256 MB Memory Card</li>
-                <li>Free Domain Name</li>
-                <li>Free Hosting Name</li>
-                <li>24x7 Online Support </li>
-            </ul>
-            <a href="" class="btn-choose-plan">Choose Plan</a>
-        </div>
-        <div class="plan">
-            <h3>
-                <span>350</span>
-                starter
-            </h3>
-            <ul>
-                <li>Unlimited users Active</li>
-                <li>1 GB Bandwidth Speed</li>
-                <li>256 MB Memory Card</li>
-                <li>Free Domain Name</li>
-                <li>Free Hosting Name</li>
-                <li>24x7 Online Support </li>
-            </ul>
-            <a href="" class="btn-choose-plan">Choose Plan</a>
+            <div class="plan">
+                <h3>
+                    <span>free</span>
+                    starter
+                </h3>
+                <ul>
+                    <li>Unlimited users Active</li>
+                    <li>1 GB Bandwidth Speed</li>
+                    <li>256 MB Memory Card</li>
+                    <li>Free Domain Name</li>
+                    <li>Free Hosting Name</li>
+                    <li>24x7 Online Support </li>
+                </ul>
+                <a href="" class="btn-choose-plan">Choose Plan</a>
+            </div>
+            <div class="plan--active">
+                <h3>
+                    <span>90</span>
+                    starter
+                </h3>
+                <ul>
+                    <li>Unlimited users Active</li>
+                    <li>1 GB Bandwidth Speed</li>
+                    <li>256 MB Memory Card</li>
+                    <li>Free Domain Name</li>
+                    <li>Free Hosting Name</li>
+                    <li>24x7 Online Support </li>
+                </ul>
+                <a href="" class="btn-choose-plan">Choose Plan</a>
+            </div>
+            <div class="plan">
+                <h3>
+                    <span>350</span>
+                    starter
+                </h3>
+                <ul>
+                    <li>Unlimited users Active</li>
+                    <li>1 GB Bandwidth Speed</li>
+                    <li>256 MB Memory Card</li>
+                    <li>Free Domain Name</li>
+                    <li>Free Hosting Name</li>
+                    <li>24x7 Online Support </li>
+                </ul>
+                <a href="" class="btn-choose-plan">Choose Plan</a>
+            </div>
         </div>
     </div>
 
 
     <div class="our__team__block">
-        <div>
+        <div class="wrap">
             <h3> <span>angels</span>
                 Our Team
             </h3>
@@ -332,14 +345,16 @@
 
 
     <div class="form">
-        <img src="" alt="picture-form">
-        <div>
-            <h2>Start Your Free Trail
-                No Need Credit Card.</h2>
-            <input type="text" placeholder="Enter your name here">
-            <input type="email" placeholder="Enter your email here">
-            <textarea name="" placeholder="Enter your message here"></textarea>
-            <button type="submit"><span></span>Submit Now</button>
+        <div class="wrap">
+            <img src="" alt="picture-form">
+            <div>
+                <h2>Start Your Free Trail
+                    No Need Credit Card.</h2>
+                <input type="text" placeholder="Enter your name here">
+                <input type="email" placeholder="Enter your email here">
+                <textarea name="" placeholder="Enter your message here"></textarea>
+                <button type="submit"><span></span>Submit Now</button>
+            </div>
         </div>
     </div>
 
